--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Master_Thesis/** filter=lfs diff=lfs merge=lfs -text
 ParlAI/** filter=lfs diff=lfs merge=lfs -text
+LandingPage[[:space:]]2/** filter=lfs diff=lfs merge=lfs -text
